--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -434,6 +434,7 @@ CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
