Re-enable Xiaomi touch driver
Change-Id: Ibc83d0ab5b90e71c3d09b7691cf5f6a76fa8a1d9
Signed-off-by: rio004 <riyon336@gmail.com>

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -105,6 +105,7 @@ obj-$(CONFIG_TOUCHSCREEN_ZFORCE)	+= zforce_ts.o
 obj-$(CONFIG_TOUCHSCREEN_COLIBRI_VF50)	+= colibri-vf50-ts.o
 obj-$(CONFIG_TOUCHSCREEN_ROHM_BU21023)	+= rohm_bu21023.o
 obj-$(CONFIG_TOUCHSCREEN_GOODIX_GTX9896_K16) += goodix_gt9896/
+obj-$(CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE) += xiaomi/
 obj-$(CONFIG_TOUCHSCREEN_COMMON)        += tp_common.o
 TOUCH_LISTS := $(subst ",,$(CONFIG_TOUCHSCREEN_MTK_TOUCH))
 obj-n += $(foreach TOUCH,$(TOUCH_LISTS),$(TOUCH)/)
