--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -471,6 +471,7 @@ CONFIG_TOUCHSCREEN_GOODIX_GTX9896_K16=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX9896_UPDATE=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX9896_GESTURE=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX9896_TOOLS=y
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_VOW_DUAL_MIC_SUPPORT=y
 CONFIG_MTK_VOW_PCMCALLBACK_SUPPORT=n
