--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1265,5 +1265,6 @@ config TOUCHSCREEN_COMMON
           If unsure, say N.
 
 source "drivers/input/touchscreen/goodix_gt9896/Kconfig"
+source "drivers/input/touchscreen/xiaomi/Kconfig"
 
 endif
