--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -194,6 +194,7 @@ CONFIG_TCPC_MT6360=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
 CONFIG_MTK_RESYM=y
+CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
 CONFIG_MTK_GBE=y
 CONFIG_MTK_TASK_TURBO=y
