--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -56,6 +56,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_BOOST=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_SYN_COOKIES=y
 CONFIG_BRIDGE=y
