--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -11,7 +11,7 @@ config MTK_ECCCI_DRIVER
 
 config MTK_ECCCI_NET_SPEED_MONITOR
 	bool "Enable ECCCI net speed monitor"
-	default y
+	default n
 	depends on MTK_CPU_CTRL
 	help
 	  Say Y here to enable ECCCI net speed monitor.
