--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-perf"
 # CONFIG_FHANDLE is not set
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_UCLAMP_TASK=y
