--- a/arch/arm64/configs/pissarro_user_defconfig
+++ b/arch/arm64/configs/pissarro_user_defconfig
@@ -23,12 +23,11 @@ CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
-CONFIG_BLK_INLINE_ENCRYPTION=y
-CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_SQ=y
-CONFIG_GPIO_TESTING_MODE=y
-CONFIG_BLK_WBT_MQ=n
+# CONFIG_BLK_WBT_MQ is not set
+CONFIG_BLK_INLINE_ENCRYPTION=y
+CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_MACH_MT6877=y
 CONFIG_SCHED_MC=y
@@ -49,15 +48,16 @@ CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_PM_DEBUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_SYN_COOKIES=y
+CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 CONFIG_BRIDGE=y
 CONFIG_VLAN_8021Q=y
 CONFIG_CLS_U32_PERF=y
@@ -66,12 +66,14 @@ CONFIG_BT=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
+CONFIG_NFC=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_EXTRA_FIRMWARE="valhall-1691526.wa"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
+CONFIG_GPIO_TESTING_MODE=y
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6853"
 CONFIG_ARCH_MTK_PROJECT="k6877v1_64"
@@ -81,7 +83,6 @@ CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 CONFIG_MTK_PMIC_CHIP_MT6359P=y
 CONFIG_MTK_EXTERNAL_CHARGER_TYPE_DETECT=y
-CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_MFD_MT6360_PMU=y
 CONFIG_MT6360_PMU_CHARGER=y
 CONFIG_MT6360_PMU_FLED=y
@@ -97,8 +98,10 @@ CONFIG_MTK_STATIC_POWER=y
 CONFIG_MTK_UNIFY_POWER=y
 CONFIG_MTK_SLBC=y
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
+CONFIG_XM_LPM_STATE_RECORDS=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5khm2sp_ofilm_mipi_raw imx471_ofilm_mipi_raw s5k4h7_sunny_mipi_raw gc02m1_sunny_mipi_raw s5khm2sp_sunny_mipi_raw imx471_sunny_mipi_raw s5k4h7_aac_mipi_raw gc02m1_ofilm_mipi_raw s5khm2sd_ofilm_mipi_raw s5khm2sd_sunny_mipi_raw"
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_DPE_SUPPORT=y
@@ -111,8 +114,8 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_SMI_EXT=y
-# CONFIG_CUSTOM_KERNEL_LCM is not set
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
+CONFIG_MTK_ROUND_CORNER_SUPPORT=y
 CONFIG_LCM_HEIGHT="2400"
 CONFIG_MTK_AAL_SUPPORT=y
 CONFIG_MTK_PQ_COLOR_MODE="DISP_MDP"
@@ -125,7 +128,6 @@ CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
-# CONFIG_CUSTOM_KERNEL_BAROMETER is not set
 CONFIG_CUSTOM_KERNEL_GRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
@@ -150,16 +152,11 @@ CONFIG_MTK_CONNFEM=y
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
 CONFIG_WLAN_DRV_BUILD_IN=y
 CONFIG_MTK_MD1_SUPPORT=25
-CONFIG_MTK_ECCCI_DRIVER=y
 CONFIG_MTK_ECCCI_C2K=y
 CONFIG_MTK_BTIF=y
 CONFIG_MTK_MDDP_SUPPORT=y
-CONFIG_MTK_MCIF_WIFI_SUPPORT=y
-CONFIG_MTK_MDDP_WH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MICROTRUST_TEE_SUPPORT=y
-CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-CONFIG_TEE=y
 CONFIG_MTK_ENABLE_GENIEZONE=y
 CONFIG_MTK_ACCDET=y
 CONFIG_ACCDET_EINT_IRQ=y
@@ -177,7 +174,7 @@ CONFIG_MTK_LEDS=y
 CONFIG_LEDS_MTK_DISP=y
 CONFIG_LEDS_MTK_I2C=y
 CONFIG_MTK_GATE_IC=y
-#CONFIG_RT4831A_I2C=y
+CONFIG_MTK_IRTX_PWM_SUPPORT=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_SCHED_HMP=y
@@ -190,8 +187,8 @@ CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_SIB_USB_SWITCH=y
 CONFIG_MTK_RTC=y
-CONFIG_MTK_USB_TYPEC_U3_MUX_V2=n
 CONFIG_TCPC_MT6360=y
+CONFIG_PISSARRO_CHARGER=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
 CONFIG_MTK_RESYM=y
@@ -208,14 +205,16 @@ CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali valhall r32p1"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_GPU_SWPM_SUPPORT=y
-CONFIG_INPUT_AW8697_HAPTIC_K16=y
 CONFIG_MTK_SYNC=y
 CONFIG_MTK_VPU_SUPPORT=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_VOW_DUAL_MIC_SUPPORT=y
+CONFIG_MTK_VOW_MAX_PDK_NUMBER=1
+CONFIG_MTK_VOW_DSP_VERSION="ver02"
 CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
 CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
-CONFIG_MTK_ULTRASND_PROXIMITY=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -228,7 +227,6 @@ CONFIG_UFSTW=y
 CONFIG_UFSTW_IGNORE_GUARANTEE_BIT=y
 CONFIG_SCSI_SKHPB=y
 CONFIG_SCSI_UFS_CRYPTO=y
-CONFIG_UFS_CHECK=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_DEFAULT_KEY=y
@@ -248,16 +246,16 @@ CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
 CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
 CONFIG_KPD_PWRKEY_USE_PMIC=y
 # CONFIG_INPUT_MOUSE is not set
-CONFIG_INPUT_TOUCHSCREEN=y
-# CONFIG_TOUCHSCREEN_MTK_TOUCH is not set
-CONFIG_INPUT_MISC=y
-CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_JOYSTICK=y
-CONFIG_SND_JACK_INPUT_DEV=y
-CONFIG_SND_JACK_INPUT_DEV_PISSARRO=y
-CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_GOODIX_GTX9896_K16=y
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_AW8697_HAPTIC_K16=y
+CONFIG_MTK_FINGERPRINT_SUPPORT=y
+CONFIG_GOODIX_K16_SENSOR=y
 # CONFIG_VT is not set
 CONFIG_LEGACY_PTY_COUNT=16
 # CONFIG_DEVMEM is not set
@@ -273,11 +271,10 @@ CONFIG_SPMI=y
 CONFIG_MTK_PMIF=y
 CONFIG_MTK_GAUGE_VERSION=30
 CONFIG_MTK_CHARGER=y
-# CONFIG_MTK_KERNEL_POWER_OFF_CHARGING is not set
-CONFIG_PISSARRO_CHARGER=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
+CONFIG_CPU_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_MTK_WATCHDOG_COMMON=y
 CONFIG_MTK_WATCHDOG_COMMON_V2=y
@@ -303,11 +300,14 @@ CONFIG_DRM=y
 CONFIG_DRM_PANEL_K16_38_0C_0A_DSC_VDO=y
 CONFIG_DRM_PANEL_K16_38_0E_0B_DSC_VDO=y
 CONFIG_DRM_MEDIATEK=y
+CONFIG_MI_ESD_CHECK=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
+# CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_LOGO=y
+CONFIG_SND_JACK_INPUT_DEV_PISSARRO=y
 CONFIG_SND_HRTIMER=y
 CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_SEQUENCER=y
@@ -319,10 +319,9 @@ CONFIG_SND_SOC_MT6877_MT6359=y
 CONFIG_SND_SOC_MTK_BTCVSD=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 CONFIG_SND_SOC_MTK_AUDIO_DSP=y
-CONFIG_SND_SOC_CS35L41=y
-CONFIG_SND_SOC_CS35L41_PISSARRO=y
+CONFIG_MTK_ULTRASND_PROXIMITY=y
 CONFIG_SND_SOC_CS35L41_I2C=y
-CONFIG_SND_SOC_WM_ADSP=y
+CONFIG_SND_SOC_CS35L41_PISSARRO=y
 CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -374,6 +373,7 @@ CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_MMC=y
+CONFIG_SDCARD_PISSARRO=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_CRYPTO=y
 CONFIG_MMC_MTK_PRO=y
@@ -381,12 +381,12 @@ CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
 CONFIG_MTK_EMMC_SUPPORT_OTP=y
 CONFIG_MTK_EMMC_HW_CQ=y
-CONFIG_SDCARD_PISSARRO=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_FLASH=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 # CONFIG_RTC_SYSTOHC is not set
 CONFIG_RTC_DRV_MT6358=y
 CONFIG_DMADEVICES=y
@@ -427,6 +427,7 @@ CONFIG_MT635X_AUXADC=y
 CONFIG_PWM=y
 CONFIG_PWM_MTK_DISP=y
 CONFIG_PHY_MTK_USB=y
+CONFIG_TEE=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_INCREMENTAL_FS=y
@@ -459,32 +460,5 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FAULT_INJECTION=y
 CONFIG_MTK_SCHED_TRACERS=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
-CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_HW is not set
-CONFIG_CPU_THERMAL=y
-CONFIG_NFC=y
-# CONFIG_LCD_CLASS_DEVICE is not set
-CONFIG_NFC_PN553_DEVICES=y
-CONFIG_NXP_P73_DEVICES=y
-CONFIG_MTK_NFC_CLKBUF_ENABLE=y
-CONFIG_TOUCHSCREEN_GOODIX_GTX9896_K16=y
-CONFIG_TOUCHSCREEN_GOODIX_GTX9896_UPDATE=y
-CONFIG_TOUCHSCREEN_GOODIX_GTX9896_GESTURE=y
-CONFIG_TOUCHSCREEN_GOODIX_GTX9896_TOOLS=y
-CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
-CONFIG_MTK_VOW_SUPPORT=y
-CONFIG_MTK_VOW_DUAL_MIC_SUPPORT=y
-CONFIG_MTK_VOW_PCMCALLBACK_SUPPORT=n
-CONFIG_MTK_VOW_MAX_PDK_NUMBER=1
-CONFIG_MTK_VOW_DSP_VERSION="ver02"
-CONFIG_MTK_FINGERPRINT_SUPPORT=y
-CONFIG_GOODIX_CAP_FINGERPRINT=y
-CONFIG_FPC_FINGERPRINT=y
-CONFIG_GOODIX_K16_SENSOR=y
-CONFIG_MTK_IRTX_PWM_SUPPORT=y
-CONFIG_MI_ESD_CHECK=y
-CONFIG_HWCONF_MANAGER=y
-CONFIG_MTK_ROUND_CORNER_SUPPORT=y
-CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
-CONFIG_XM_LPM_STATE_RECORDS=y
